--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.7.7"
+    "mongodb": "^4.3.1",
+    "mongoose": "^5.7.7",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "^5.0.0"
   },
   "scripts": {
     "start": "node server.js",
     "prod-install": "npm install && cd client && npm install",
     "build": "cd client && npm run build",
     "prod": "npm run build && npm start"
-  },
-  "devDependencies": {}
+  }
 }
